--- a/trunk/Makefile
+++ b/trunk/Makefile
@@ -1,6 +1,8 @@
-pruebas : lexer1.beam lexer2N.beam parser1.beam test_lexer1.beam test_parser1.beam
-	erl -noshell -s test_lexer1 test -s init stop
+pruebas : lexer1.beam lexer2N.beam parser1.beam test_lexer1.beam test_parser1.beam\
+		test_lexer2N.beam
 	erl -noshell -s test_parser1 test -s init stop
+	erl -noshell -s test_lexer1 test -s init stop
+	erl -noshell -s test_lexer2N test -s init stop
 	
 lexer1.beam : lexer1.erl
 	erlc lexer1.erl
@@ -14,15 +16,17 @@ parser1.beam : parser1.erl
 subdirs :
 	cd eunit; make
 	
-test_lexer1.beam : eunit/test_lexer1.erl
-	erlc eunit/test_lexer1.erl
-
 test_parser1.beam : eunit/test_parser1.erl
 	erlc eunit/test_parser1.erl
 	
+test_lexer1.beam : eunit/test_lexer1.erl
+	erlc eunit/test_lexer1.erl
+
+test_lexer2N.beam : eunit/test_lexer2N.erl
+	erlc eunit/test_lexer2N.erl
+	
 clean : borra pruebas
 	
-
 borra : 
 	rm *.beam
 	
