--- a/trunk/Makefile
+++ b/trunk/Makefile
@@ -1,10 +1,11 @@
 pruebas : lexer1.beam lexer2.beam comment.beam test_lexer1.beam test_comment.beam\
-		test_lexer2.beam lexer3.beam parser.beam test_parser.beam
+		test_lexer2.beam lexer3.beam parser.beam test_parser.beam test_lexer3.beam
 	erl -noshell -s test_comment test -s init stop
 	erl -noshell -s test_lexer1 test -s init stop
 	erl -noshell -s test_lexer2 test -s init stop
+	erl -noshell -s test_lexer3 test -s init stop 
 	erl -noshell -s test_parser test -s init stop
-	erl -noshell -s lexer3 principal "todo.html" -s init stop
+	
 	
 WIN = 
 	
@@ -35,6 +36,9 @@ test_lexer1.beam : eunit/test_lexer1.erl
 test_lexer2.beam : eunit/test_lexer2.erl
 	erlc $(WIN) eunit/test_lexer2.erl
 	
+test_lexer3.beam : eunit/test_lexer3.erl
+	erlc $(WIN) eunit/test_lexer3.erl
+
 test_parser.beam : eunit/test_parser.erl
 	erlc $(WIN) eunit/test_parser.erl
 	
