--- a/trunk/Makefile
+++ b/trunk/Makefile
@@ -1,23 +1,11 @@
-<<<<<<< .mine
-pruebas : lexer1.beam lexer2.beam comment.beam exp_eval.beam test_lexer1.beam test_comment.beam\
-		test_lexer2.beam lexer3.beam parser.beam test_parser.beam test_eval.beam test_lexer3.beam
-=======
-pruebas : lexer1.beam lexer2.beam comment.beam test_lexer1.beam test_comment.beam\
-		test_lexer2.beam lexer3.beam parser.beam test_parser.beam test_lexer3.beam
->>>>>>> .r49
+pruebas :  comment.beam lexer1.beam lexer2.beam lexer3.beam parser.beam exp_eval.beam\
+		test_comment.beam test_lexer1.beam test_lexer2.beam test_lexer3.beam test_parser.beam test_eval.beam
 	erl -noshell -s test_comment test -s init stop
 	erl -noshell -s test_lexer1 test -s init stop
 	erl -noshell -s test_lexer2 test -s init stop
-<<<<<<< .mine
 	erl -noshell -s test_lexer3 test -s init stop
-=======
-	erl -noshell -s test_lexer3 test -s init stop 
->>>>>>> .r49
 	erl -noshell -s test_parser test -s init stop
-<<<<<<< .mine
 	erl -noshell -s test_eval test -s init stop
-=======
->>>>>>> .r49
 	
 	
 WIN = 
@@ -51,9 +39,6 @@ test_lexer1.beam : eunit/test_lexer1.erl
 
 test_lexer2.beam : eunit/test_lexer2.erl
 	erlc $(WIN) eunit/test_lexer2.erl
-
-test_lexer3.beam : eunit/test_lexer3.erl
-	erlc $(WIN) eunit/test_lexer3.erl
 
 test_lexer3.beam : eunit/test_lexer3.erl
 	erlc $(WIN) eunit/test_lexer3.erl
