Ya hace la lista de parametros y la de headers pero siento que esta bien ineficiente el codigo

--- a/trunk/Makefile
+++ b/trunk/Makefile
@@ -1,14 +1,14 @@
 pruebas :  comment.beam lexer1.beam lexer2.beam lexer3.beam parser.beam exp_eval.beam peval.beam\
-		server.beam\
-		test_comment.beam test_lexer1.beam test_lexer2.beam test_lexer3.beam test_parser.beam test_eval.beam test_peval.beam
+		server.beam cliente.beam\
+		test_comment.beam test_lexer1.beam test_lexer2.beam test_lexer3.beam test_parser.beam test_eval.beam test_peval.beam test_servidor.beam
 	erl -noshell -s test_comment test -s init stop
 	erl -noshell -s test_lexer1 test -s init stop
 	erl -noshell -s test_lexer2 test -s init stop
 	erl -noshell -s test_lexer3 test -s init stop
 	erl -noshell -s test_parser test -s init stop
 	erl -noshell -s test_eval test -s init stop
-	erl -noshell -s test_peval test -s init stop
-	
+	erl -noshell -s test_peval test -s init stop 
+	erl -noshell -s test_servidor test -s init stop
 lexer1.beam : lexer1.erl
 	erlc lexer1.erl
 
@@ -33,6 +33,9 @@ peval.beam : peval.erl
 server.beam : servidor/server.erl
 	erlc servidor/server.erl
 
+cliente.beam : servidor/cliente.erl
+	erlc servidor/cliente.erl
+
 subdirs :
 	cd eunit; make
 
@@ -56,6 +59,9 @@ test_eval.beam : eunit/test_eval.erl
 	
 test_peval.beam : eunit/test_peval.erl
 	erlc eunit/test_peval.erl
+
+test_servidor.beam : eunit/test_servidor.erl
+	erlc eunit/test_servidor.erl
 
 clean : borra pruebas
 	
