Funciona lo de fact

--- a/trunk/Makefile
+++ b/trunk/Makefile
@@ -1,14 +1,13 @@
-pruebas :  comment.beam lexer1.beam lexer2.beam lexer3.beam parser.beam exp_eval.beam peval.beam\
-		server.beam cliente.beam\
-		tests_subdirs
-	erl -noshell -s eunit/test_comment test -s init stop
-	erl -noshell -s eunit/test_lexer1 test -s init stop
-	erl -noshell -s eunit/test_lexer2 test -s init stop
-	erl -noshell -s eunit/test_lexer3 test -s init stop
-	erl -noshell -s eunit/test_parser test -s init stop
-	erl -noshell -s eunit/test_eval test -s init stop
-	erl -noshell -s eunit/test_peval test -s init stop 
-	erl -noshell -s eunit/test_servidor test -s init stop
+pruebas :  comment.beam lexer1.beam lexer2.beam lexer3.beam parser.beam exp_eval.beam peval.beam cliente.beam server.beam libs
+	erl -noshell -pa eunit -s test_comment test -s init stop
+	erl -noshell -pa eunit -s test_lexer1 test -s init stop
+	erl -noshell -pa eunit -s test_lexer2 test -s init stop
+	erl -noshell -pa eunit -s test_lexer3 test -s init stop
+	erl -noshell -pa eunit -s test_parser test -s init stop
+	erl -noshell -pa eunit -s test_eval test -s init stop
+	erl -noshell -pa eunit -s test_peval test -s init stop 
+	erl -noshell -pa eunit -s test_servidor test -s init stop
+
 	
 lexer1.beam : lexer1.erl
 	erlc lexer1.erl
@@ -33,43 +32,19 @@ peval.beam : peval.erl
 
 server.beam : servidor/server.erl
 	erlc servidor/server.erl
-
+	
 cliente.beam : servidor/cliente.erl
 	erlc servidor/cliente.erl
 
-
-
-tests_subdirs :
-	cd eunit : pruebas
-
-test_comment.beam : eunit/test_comment.erl
-	erlc eunit/test_comment.erl
-
-test_lexer1.beam : eunit/test_lexer1.erl
-	erlc eunit/test_lexer1.erl
-
-test_lexer2.beam : eunit/test_lexer2.erl
-	erlc eunit/test_lexer2.erl
-
-test_lexer3.beam : eunit/test_lexer3.erl
-	erlc eunit/test_lexer3.erl
-
-test_parser.beam : eunit/test_parser.erl
-	erlc eunit/test_parser.erl
-
-test_eval.beam : eunit/test_eval.erl
-	erlc eunit/test_eval.erl
+libs :
+	make -C eunit
+	make -C servidor
+	make -C ctrl
 	
-test_peval.beam : eunit/test_peval.erl
-	erlc eunit/test_peval.erl
+clean : borra pruebas
 
-test_servidor.beam : eunit/test_servidor.erl
-	erlc eunit/test_servidor.erl
-
-clean : 
-	borra pruebas
-	cd eunit : make clean
-	
 borra : 
 	rm *.beam
-	cd eunit : make borra
+	make -C eunit borra
+	make -C servidor borra
+	make -C ctrl borra
