Ya funciona lo de headers

--- a/trunk/Makefile
+++ b/trunk/Makefile
@@ -1,4 +1,4 @@
-pruebas :  comment.beam lexer1.beam lexer2.beam lexer3.beam parser.beam exp_eval.beam peval.beam cliente.beam server.beam libs
+pruebas :  comment.beam lexer1.beam lexer2.beam lexer3.beam parser.beam exp_eval.beam peval.beam ascii.beam cliente.beam server.beam libs
 	erl -noshell -pa eunit -s test_comment test -s init stop
 	erl -noshell -pa eunit -s test_lexer1 test -s init stop
 	erl -noshell -pa eunit -s test_lexer2 test -s init stop
@@ -30,6 +30,9 @@ exp_eval.beam : exp_eval.erl
 peval.beam : peval.erl
 	erlc peval.erl
 
+ascii.beam : ascii.erl
+	erlc ascii.erl
+
 server.beam : servidor/server.erl
 	erlc servidor/server.erl
 	
@@ -37,14 +40,13 @@ cliente.beam : servidor/cliente.erl
 	erlc servidor/cliente.erl
 
 libs :
-	make -C eunit
-	make -C servidor
-	make -C ctrl
+	cd eunit; make pruebas
+	cd ctrl; make compilados
 	
 clean : borra pruebas
 
 borra : 
 	rm *.beam
-	make -C eunit borra
-	make -C servidor borra
-	make -C ctrl borra
+	cd eunit; make borra
+	cd ctrl; make borra
+
