--- a/trunk/ctrl/Makefile
+++ b/trunk/ctrl/Makefile
@@ -1,4 +1,7 @@
-compilados: forma.beam prueba.beam 
+compilados: forma.beam prueba.beam formanum.beam
+
+formanum.beam : formanum.erl
+	erlc formanum.erl
 	
 forma.beam : forma.erl
 	erlc forma.erl
