pruebas de lexer4 y del eval_if

--- a/ctrl/Makefile
+++ b/ctrl/Makefile
@@ -1,4 +1,4 @@
-compilados: forma.beam prueba.beam formanum.beam
+compilados: forma.beam prueba.beam formanum.beam prueba_if.beam
 
 formanum.beam : formanum.erl
 	erlc formanum.erl
@@ -8,6 +8,9 @@ forma.beam : forma.erl
 	
 prueba.beam : prueba.erl
 	erlc prueba.erl
+	
+prueba_if.beam : prueba_if.erl
+	erlc prueba_if.erl
 	
 clean : borra compilados
 
