Metodo auxiliar covert_term

--- a/eunit/Makefile
+++ b/eunit/Makefile
@@ -1,5 +1,6 @@
-pruebas: test_comment.beam test_parser.beam test_lexer1.beam test_lexer2.beam test_lexer2.beam test_lexer3.beam\
-	test_eval.beam test_peval.beam test_servidor.beam test_lexer4.beam test_if.beam 
+pruebas: test_comment.beam test_parser.beam test_lexer1.beam test_lexer2.beam\
+	test_lexer2.beam test_lexer3.beam test_eval.beam test_peval.beam\
+	test_servidor.beam test_lexer4.beam test_if.beam test_convert_term.beam 
 	
 test_lexer1.beam : test_lexer1.erl
 	erlc test_lexer1.erl
@@ -30,6 +31,9 @@ test_lexer4.beam : test_lexer4.erl
 	
 test_if.beam : test_if.erl
 	erlc test_if.erl
+		
+test_convert_term.beam : test_convert_term.erl
+	erlc test_convert_term.erl
 	
 clean : borra pruebas
 
