Con la prueba funcionando

--- a/ctrl/Makefile
+++ b/ctrl/Makefile
@@ -1,4 +1,4 @@
-compilados: forma.beam prueba.beam formanum.beam prueba_if.beam
+compilados: forma.beam prueba.beam formanum.beam prueba_if.beam enunciados.beam
 
 formanum.beam : formanum.erl
 	erlc formanum.erl
@@ -11,6 +11,9 @@ prueba.beam : prueba.erl
 	
 prueba_if.beam : prueba_if.erl
 	erlc prueba_if.erl
+		
+enunciados.beam : enunciados.erl
+	erlc enunciados.erl
 	
 clean : borra compilados
 
